2008-9-24  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-16.
    * coefplot: 
        1. add the pch.pts option
        2. fix mar error.

2008-8-19  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-15.
    * sim: coerce bhat in sim.mer into a matrix to suit the use of mvrnorm

2008-7-27  Yu-Sung Su     <ys463@columbia.edu>  
    * coefplot: add options plot=TRUE, epsilon, add=FALSE into BUGS method

2008-7-22  Yu-Sung Su     <ys463@columbia.edu>  
    * R/bayesglm: new option "Warning" to turn off the error message
        of no convergence and separation

2008-7-22  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-14.
    * make all internal function start with .
    * add keyword manip to the docs
    * export logit(x) for use.
    * man/balance: doc for balance().
    * man/residual.plot: new function().
    * man/array.append: doc for array.append
    * man/sigma.hat: add ... option
    * man/se.coef: add ... option
    * R/array.append: new function to add array to the existing one.
    * R/coefplot: fix when plot=FALSE, should not plot varnames. 
    * R/balanceplot: obsolet!
    * R/balance: new function that computes, print and plot the balance stats
    * R/residual.plot: new function().
    * R/sigma.hat: add ...
    * R/se.coef: add ...

2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-13.
    * R/bayespolr: fix a bug in gmin

2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-12.
    * R/bayespolr: rep start values to have the same length of coef + zeta


2008-7-15  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-11.
    * R/coefplot: add options add=TRUE and epsilon=.1, 
        so coefplot can plot over the existing plot.

2008-7-10  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-10.